--- a/styles/resume.css
+++ b/styles/resume.css
@@ -3,64 +3,57 @@
     
     height: 80vh;
 }
+.Midnight-Elegance,.Navy-Prestige,.Royal-Clarity,.Emerald-Opulence,.Teal-Sophistication,.Crimson-Essence,.Corporate-Authority,.Creative-Energy,.Tech-Innovation,.Healthcare-Trust{
+    width: 80vw;
+    height: 80vh;
+}
 .Midnight-Elegance{
     background-color: #000000;
     color: #ffffff;
-    width: 80vw;
-    height: 80vh;
+    
 }
 .Navy-Prestige{
     color: #ffffff;
     background-color: #A8A8A8;
-    width: 80vw;
-    height: 80vh;
+    
 }
 .Royal-Clarity{
     color: black;
     background: rgb(65,105,225);
-    background: radial-gradient(circle, rgba(65,105,225,1) 0%, rgba(255,255,255,1) 100%);
-    width: 80vw;
-    height: 80vh;
+    background: radial-gradient(circle, rgba(65,105,225,1) 0%, rgba(255,255,255,1) 100%);  
 }
 .Emerald-Opulence{
     color: #2f4f4f;
     background-color: #F5F5DC;
-    width: 80vw;
-    height: 80vh;
+ 
 }
 .Teal-Sophistication{
     color: #ffffff;
     background-color: #386964;
-    width: 80vw;
-    height: 80vh;
+    
 }
 .Crimson-Essence{
     color: #800020;
     background-color: #D3D3D3;
-    width: 80vw;
-    height: 80vh;
+
 }
 .Corporate-Authority{
     background-color: #2C3E50;
     color: #F5F5DC;
-    width: 80vw;
-    height: 80vh;
+  
 }
 .Creative-Energy{
     background-color: #FF6B6B;
     color: #1E1E1E;
-    width: 80vw;
-    height: 80vh;
+    
 }
 .Tech-Innovation{
     background-color: #3498DB;
     color: #ffffff;
-    width: 80vw;
-    height: 80vh;
+    
 }
 .Healthcare-Trust{
     background-color: #5DADE2;
     color: blueviolet;
-    width: 80vw;
-    height: 80vh;
+   
 }
