--- a/styles/resume.css
+++ b/styles/resume.css
@@ -57,3 +57,16 @@
     color: blueviolet;
    
 }
+#preview {
+    position: absolute;
+    border-radius: 10%;
+    box-shadow: 20px 20px 20px rgba(0, 0, 0, 0.5);
+    margin: 20px;
+}
+
+.img-container{
+    position: relative;
+}
+.resume-header{
+    display: flexbox;
+}
